--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Private Project Stuff
+notes.txt
+GeoLite2-Country.mmdb
+run.sh
